<resources>
    <string name="app_name">KodeTraineeTest</string>
    <string name="avatar_content_d">avatar</string>
    <string name="critical_error_screen_title">Какой-то сверхразум все сломал</string>
    <string name="critical_error_screen_text">Постараемся быстро починить</string>
    <string name="critical_error_screen_again">Попробовать снова</string>
    <string name="department_tab_row_all">Все</string>
    <string name="search_field_placeholder">Введи имя, тег, почту...</string>
    <string name="bottom_sheet_sort_title">Сортировка</string>
    <string name="departments_accordance_ior">iOS</string>
    <string name="departments_accordance_android">Android</string>
    <string name="departments_accordance_design">Дизайн</string>
    <string name="departments_accordance_management">Менеджмент</string>
    <string name="departments_accordance_qa">QA</string>
    <string name="departments_accordance_back">Бэк-офис</string>
    <string name="departments_accordance_front">Frontend</string>
    <string name="departments_accordance_hr">HR</string>
    <string name="departments_accordance_pr">PR</string>
    <string name="departments_accordance_backend">Backend</string>
    <string name="departments_accordance_supp">Техподдержка</string>
    <string name="departments_accordance_analytics">Аналитика</string>
    <string name="radio_button_abc">По алфавиту</string>
    <string name="radio_button_born_date">По дню рождения</string>
    <string name="cancel_button_title">Отмена</string>
    <string name="years1">лет</string>
    <string name="years2">год</string>
    <string name="years3">года</string>
    <string name="snackbar_errow_message">Не могу обновить данные.\nПроверь соединение с интернетом.</string>
    <string name="snackbar_loading_message">Секундочку, гружусь...</string>
    <string name="xml_version_button">То XML Version</string>
    <string name="compose_version_button">То Compose Version</string>
    <string name="jetpack_compose_xml">Практическое задание выполнено в двух вариантах: Jetpack Compose и классический XML. Для перехода в раздел нажмите на соответствующую кнопку.</string>
    <string name="nothing_found_title">Мы никого не нашли</string>
    <string name="nothing_found_text">Попробуй скорректировать запрос</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>