<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/jetpack_compose_xml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="48dp"
                app:layout_constraintBottom_toTopOf="@+id/compose_button" />

        <androidx.appcompat.widget.AppCompatButton
                android:text="@string/compose_version_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/compose_button"
                android:onClick="composeButtonClick"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
                android:text="@string/xml_version_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/xml_button"
                app:layout_constraintStart_toStartOf="@+id/compose_button"
                android:onClick="xmlButtonClick"
                app:layout_constraintTop_toBottomOf="@+id/compose_button"
                android:layout_marginTop="24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>