<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/error_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="106sp"
            android:background="@drawable/flyingsaucer1f6f8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@null" />

    <TextView
            android:id="@+id/critical_error_title"
            style="@style/title_three_semiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critical_error_screen_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_img" />

    <TextView
            android:id="@+id/critical_error_text"
            android:layout_width="wrap_content"
            style="@style/headline_regular"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:lineSpacingExtra="1sp"
            android:text="@string/critical_error_screen_text"
            android:textColor="@color/text_tetriary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/critical_error_title" />

    <Button
            style="@style/headline_regular"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reconnect_button"
            android:background="@android:color/transparent"
            android:text="@string/critical_error_screen_again"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/critical_error_text"
            android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
